tests/paczka1/fuzzy1/72530503.err
Error in line 18: wlV A613 70,2
Error in line 15: eRdqNVPTv5 S466 34,8
Error in line 21: wlV S872 9,1
Error in line 19: A613 S872 58,2
Error in line 28: A613 S466 97,6
Error in line 35: eRdqNVPTv5 S872 92,8
